RESOLVED FIXED295188
[UnifiedPDF] [iOS] Page number indicator does not have a fade out transition
https://bugs.webkit.org/show_bug.cgi?id=295188
Summary [UnifiedPDF] [iOS] Page number indicator does not have a fade out transition
Abrar Rahman Protyasha
Reported 2025-06-29 22:05:39 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-06-30 02:06:04 PDT
EWS
Comment 2 2025-06-30 10:11:37 PDT
Committed 296807@main (143c9bf9638f): <https://commits.webkit.org/296807@main> Reviewed commits have been landed. Closing PR #47370 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.