[UnifiedPDF] [iOS] Page number indicator does not have a fade out transition https://bugs.webkit.org/show_bug.cgi?id=295188 rdar://154641207

Reviewed by Wenson Hsieh.

We notice unexpected behavior from +animateWithDuration:animations: as
we try to fade out the page number indicator. This seems to only
reproduce with a UIGlassEffect visual effect configured, as this does
not happen on visionOS (which uses a UIBlurEffect instead).

While this needs to be investigated further in rdar://154649008, this
patch works around the problem by adopting the animation option
`UIViewAnimationOptionFlushUpdates`, which flushes all pending property
updates when the animation context/scope is modified.

* Source/WTF/wtf/PlatformHave.h:
Introduce a HAVE macro to express platform availability information
about UIViewAnimationOptionFlushUpdates.

* Source/WebKit/UIProcess/PDF/WKPDFPageNumberIndicator.mm:
(-[WKPDFPageNumberIndicator hide:]):

Canonical link: https://commits.webkit.org/296807@main